# lone-wolf

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  README.md  ops.md  pyproject.toml
alembic/: env.py
alembic/versions/: 8056784435d8_initial_schema_all_tables.py  bd185b7edf5d_add_game_object_scene_appearances_table.py  bfd1691668d0_add_helghast_modifier_type.py
app/: config.py  database.py  dependencies.py  events.py  limiter.py  main.py  ui_dependencies.py
app/engine/: combat.py  conditions.py  inventory.py  lifecycle.py  meters.py  phases.py  random.py  types.py
app/models/: __init__.py  admin.py  content.py  player.py  taxonomy.py  wizard.py
app/parser/: extract.py  llm.py  load.py  merge.py  pipeline.py  transform.py  types.py
app/routers/: auth.py  books.py  characters.py  game_objects.py  gameplay.py  leaderboards.py  reports.py
app/schemas/: admin.py  admin_auth.py  auth.py  books.py  characters.py  common.py  gameplay.py  (+3 more)
docs/: admin-guide.md  configuration.md  faq.md  player-guide.md  tutorials.md
implementation/: PROGRESS.md  epic-0-spec-fixes.md  epic-1-foundation.md  epic-10-refactoring-spec-sync.md  epic-2-auth.md  epic-3-engine.md  epic-4-wizard.md  epic-5-parser.md  epic-6-gameplay-api.md  epic-7-content-api.md  epic-8-player-ui.md  epic-9-admin-ui.md
scripts/: backfill_appearances.py  create_admin.py  dedup_game_objects.py  seed_db.py  seed_static.py  yaml_io.py
spec/: MASTER.md  api.md  data-model.md  game-engine.md  glossary.md  parser.md  seed-data.md  todo.md
templates/: base.html
tests/: conftest.py  factories.py
(+121 files in other folders)
